--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -17,4 +17,4 @@ scrape_configs:
     scrape_interval: 5s
     honor_labels: true
     static_configs:
-      - targets: ['host.docker.internal:8000']
+      - targets: ['127.0.0.1:8000']
